2007-07-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameConfig.cpp: removed "/conf" added
	automatically to directory supplied by YARP_CONF.  Users
	of the optional environment variable YARP_CONF seem to prefer 
	this.

        If YARP_CONF is set, YARP tries to read the following 
	configuration file:
          ${YARP_CONF}/yarp.conf
        rather than (as was the case previously)
          ${YARP_CONF}/conf/yarp.conf
	
	* src/libYARP_OS/src/Network.cpp: make Network::sync
	behave exactly like "yarp wait /portname" from the 
	command line

	* src/libYARP_OS/src/Companion.cpp: propagated a more
	useful return value to Network::connect

2007-07-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NameConfig.cpp: basic support
	for multiple nameservers, and switching back and forth
	between them.  Use:

	   yarp namespace /foo

	To set the namespace to "/foo" (default is "/root").  Use:

	   yarp namespace

	to query the current namespace.  "Namespace" just means the
	name of a port associated with a particular yarp name server.

	For example, on a single machine you could start up two
	name servers that operate independently:
	   [terminal 1] yarp namespace /space1
	   [terminal 1] yarp server
	   [terminal 2] yarp namespace /space2
	   [terminal 2] yarp server 20000
	The 20000 in the second server is the start of the range of
	socket port numbers that server manages.  If you plan to 
	simultaneously use multiple nameservers they need to own 
	different socket port ranges.
	After the above, names are registered and queried from /space2
	until you type
	   [terminal 3] yarp namespace /space1
	at which point they switch to the first namespace.
	
2007-07-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/DgramTwoWayStream.cpp: added environment
	variable control of packet sizes.  Set:
	  YARP_DGRAM_SIZE
	to the maximum number of bytes you want per packet.  This