@@ -25,8 +25,8 @@ from CVS</A> (use empty/blank password):
 
 Or you can download a recent source code package:
 <ul>
-<li><A HREF=http://eris.liralab.it/yarp/downloads/yarp/yarp-2.1.5.tar.gz>yarp-2.1.5.tar.gz</A> for UNIX</li>
-<li><A HREF=http://eris.liralab.it/yarp/downloads/yarp/yarp-2.1.5.zip>yarp-2.1.5.zip</A> for Windows</li>
+<li><A HREF=http://eris.liralab.it/yarp/downloads/yarp/yarp-2.1.6.tar.gz>yarp-2.1.6.tar.gz</A> for UNIX</li>
+<li><A HREF=http://eris.liralab.it/yarp/downloads/yarp/yarp-2.1.6.zip>yarp-2.1.6.zip</A> for Windows</li>
 </ul>
 <a href=http://www.cmake.org>CMake</a> is recommended for building these
 packages, and is required for compiling full device support.<P>
@@ -74,6 +74,11 @@ To get the source code, do:
 <h2>Older versions</h2>
 
 Older, stable versions of YARP:
+
+<ul>
+<li><A HREF=http://eris.liralab.it/yarp/downloads/yarp/yarp-2.1.5.tar.gz>yarp-2.1.5.tar.gz</A> for UNIX</li>
+<li><A HREF=http://eris.liralab.it/yarp/downloads/yarp/yarp-2.1.5.zip>yarp-2.1.5.zip</A> for Windows</li>
+</ul>
 
 <ul>
 <li><A HREF=http://eris.liralab.it/yarp/downloads/yarp/yarp-2.1.4.tar.gz>yarp-2.1.4.tar.gz</A> for UNIX</li>
